<resources>
    <string name="app_name">CYAN MUSIC PLAYER</string>
    <string name="back">Back</string>
    <string name="artists">Artists</string>
    <string name="your_search_results">Your search results</string>
    <string name="search_for">Search for artists, albums, songs, playlists…</string>
    <string name="now_playing">now playing</string>
    <string name="search">search</string>
    <string name="my_albums">my albums</string>
    <string name="music_store">music store</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="pink_floyd_the_wall_songs_list">CD 1  \n\t 1. In the Flesh?  \n\t 2. The Thin Ice  \n\t 3. Another Brick in the Wall, Part 1  \n\t 4. The Happiest Days of Our Lives  \n\t 5. Another Brick in the Wall, Part 2  \n\t 6. Mother  \n\t 7. Goodbye Blue Sky  \n\t 8. Empty Spaces  \n\t 9. Young Lust  \n\t 10. One of My Turns  \n\t 11. Don’t Leave Me Now  \n\t 12. Another Brick in the Wall, Part 3  \n\t 13. Goodbye Cruel World  \n CD 2  \n\t 1. Hey You  \n\t 2. Is There Anybody Out There?  \n\t 3. Nobody Home  \n\t 4. Vera  \n\t 5. Bring the Boys Back Home  \n\t 6. Comfortably Numb  \n\t 7. The Show Must Go On  \n\t 8. In the Flesh  \n\t 9. Run Like Hell  \n\t 10. Waiting for the Worms  \n\t 11. Stop  \n\t 12. The Trial  \n\t 13 Outside the Wall</string>
    <string name="show">Show</string>
    <string name="track_list">Track list</string>
    <string name="play">Play</string>
    <string name="album_image">Album Image</string>
    <string name="more_info_about_your_album">More info about your album</string>
    <string name="main_menu">Main menu</string>
    <string name="your_albums_library">Your albums library</string>
    <string name="your_music_player">Your music player</string>
    <string name="price">Price</string>
    <string name="buy_new_album">buy new album</string>
    <string name="music_shop_click_price_button_to_buy_album">Music Shop - click Price button to buy album</string>
    <string name="more">more</string>
    <string name="payment_api_description">I have found www.simplify.com to be pretty simple and fast to implement API for payment. I have created account to generate my personal public api key for test purposes. Then I have added this library (com.simplify:simplify-android) to my gradle config. Then i have followed the instructions inthe tutorial. I have added com.simplify.android.sdk.CardEditor to my xml. Then I have added my public key to java Simplify object. Then i was planning to add checkout Button that will appear when all card data will be filled in CardEditor component.It can be done with addOnStateChangeListener method. If the card data is correct and user will click checkout then simplify should transfer money on my account and when money will be on my account user will receive the item</string>
</resources>
