<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.joannahulek.cyanmusicplayer.BuyNewAlbumActivity">

    <TextView
        android:id="@+id/label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/music_shop_click_price_button_to_buy_album" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="3">

                <TableRow>

                    <TextView
                        style="@style/HeaderStyle"
                        android:layout_column="1"
                        android:text="@string/title" />

                    <TextView
                        style="@style/HeaderStyle"
                        android:layout_column="2"
                        android:text="@string/author" />

                    <TextView
                        style="@style/HeaderStyle"
                        android:layout_column="3"
                        android:text="@string/price" />

                </TableRow>

                <View
                    android:layout_height="1dip"
                    android:background="#FF909090" />

                <TableRow>

                    <TextView
                        android:id="@+id/album_name"
                        style="@style/TextStyle"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="Revolver" />

                    <TextView
                        android:id="@+id/artist_name"
                        style="@style/TextStyle"
                        android:layout_column="2"
                        android:layout_gravity="center"
                        android:text="The Beatles" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/buy_album"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/rounded_corners"
                            android:text="$19.88" />
                    </LinearLayout>

                </TableRow>


            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_api_description" />
        </LinearLayout>
    </ScrollView>

   <!-- <com.simplify.android.sdk.CardEditor
        android:id="@+id/card_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/search_for_more_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/rounded_corners"
            android:text="@string/more" />

        <Button
            android:id="@+id/back_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_corners"
            android:text="@string/back" />

    </RelativeLayout>


</LinearLayout>