<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.example.joannahulek.cyanmusicplayer.MyAlbumsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_text_view"
        android:layout_margin="20dp"
        android:text="@string/your_albums_library"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="3">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        style="@style/HeaderStyle"
                        android:text="@string/title" />

                    <TextView
                        android:layout_column="2"
                        style="@style/HeaderStyle"
                        android:text="@string/author" />

                    <TextView
                        android:layout_column="3"
                        style="@style/HeaderStyle"
                        android:text="@string/rating" />

                </TableRow>

                <View
                    android:layout_height="1dip"
                    android:background="#FF909090" />

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        style="@style/TextStyle"
                        android:id="@+id/album_name"
                        android:text="The Wall" />

                    <TextView
                        android:layout_column="2"
                        style="@style/TextStyle"
                        android:id="@+id/artist_name"
                        android:text="Pink Floyd" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_column="3">

                        <RatingBar
                            android:id="@+id/album_rating"
                            android:numStars="5"
                            style="?android:attr/ratingBarStyleIndicator"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_gravity="right"
        android:background="@drawable/rounded_corners"
        android:text="@string/back" />
</LinearLayout>